<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_check"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    android:fontFamily="roboto-medium"
    android:padding="8dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accBalanceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/str_AccBalance"
            android:textColor="@color/colorName"
            android:textSize="33sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/accBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/accBalanceTxt"
            android:gravity="center"
            android:textColor="@color/colorName"
            android:textSize="33sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/chartLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_chart"
                android:textSize="15sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="350dp" />

            <TextView
                android:id="@+id/tvStatistics"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/str_statistics"
                android:textColor="@color/colorName"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_transactions"
                android:textSize="15sp" />


            <ScrollView
                android:id="@+id/scrollStatistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/rlStatistics"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="vertical">

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/btnGoBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/general_btn_style"
                android:gravity="center"
                android:text="@string/txt_scroll_to_top"
                android:textColor="@color/colorName" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
