<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    android:fontFamily="roboto-medium"
    android:padding="8dp"

    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_withdraw"
        android:textColor="@color/colorName"
        android:textSize="33sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/chartLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="fill_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/str_default"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/denominationTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/str_Choose"
                android:textColor="@color/colorName"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/linLayout"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:orientation="vertical"/>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnGoBack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/general_btn_style"
                    android:text="@string/btn_Go_back"
                    android:textColor="@color/colorName" />

                <Button
                    android:id="@+id/btnWithdrawMoney"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/general_btn_style"
                    android:text="@string/btn_withdraw"
                    android:textColor="@color/colorName" />
                <!--android:layout_toRightOf="@+id/btnGoBack"-->

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>